--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     align-items: center; /* Centraliza verticalmente */
     min-height: 100vh; /* Ocupa a altura total da janela de visualização */
     margin: 0;
-}
+}//////
 
 /* Estilo do Contentor Principal */
 .container {
